tests/fixtures/invalid/none_bitand_int.py
# Cannot bitwise AND None and Int
x: None = None & 1
